<?xml version="1.0"?>
<package>
  <name>lidar_motion</name>
  <version>1.10.0</version>
  <description>lidar_motion package</description>

  <maintainer email="cirpue49@yahoo.co.jp">Kosuke Murakami</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>autoware_msgs</build_depend>
    <build_depend>tf</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>pcl_ros</run_depend>
    <run_depend>autoware_msgs</run_depend>
    <run_depend>tf</run_depend>

  <export></export>
</package>
